Fixed: Missing padding for 404 page masthead

--- a/_sass/base/_responsive.scss
+++ b/_sass/base/_responsive.scss
@@ -61,7 +61,7 @@
     font-size: $base-font-size + 4;
   }
   .masthead--error {
-    padding: $padding*3 0;
+    padding: $padding*3;
   }
 }
 
